Use Collection API methods
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>